fixed spacing using better practices using margin instead of padding.

--- a/Style.css
+++ b/Style.css
@@ -65,8 +65,9 @@ body {
     height: 400px;
     width: 315px;
     float: right;
-    padding-right: 50px;
-    padding-top: 100px;
+    margin-right: 50px;
+    margin-top: 100px;
+    border: solid 4px black;
 }
 
 .skills {
